attribute model CRUD
